<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Feed">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Feed">

            <Button
                android:id="@+id/createAPost"
                android:layout_marginLeft="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/toolbar"
                android:text="+"
                android:textStyle="bold"></Button>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/FeedRecycler"
                android:layout_below="@id/createAPost"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </RelativeLayout>
    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/toolbar_menu"


        />
</androidx.constraintlayout.widget.ConstraintLayout>